--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -360,7 +360,7 @@ section{
 
 /*seccion aboutt*/
 .tamanio{
-    min-height: 102vh;
+    min-height: 110vh;
 }
 .hidden-text{
     display: none;
@@ -1173,8 +1173,9 @@ align-items: center;
 @media (max-width: 605px){
     .copy_text button{
         display: none;
+        
     }
-    
+  
 }
 
 @media (max-width: 520px){
@@ -1204,7 +1205,9 @@ align-items: center;
         padding: 10rem 4% 5rem 5%;
     }
 
-    
+    .achicar_input_mobile{
+        padding: 3%;
+    }
 
     .footer{
         flex-direction: column-reverse;
@@ -1228,35 +1231,12 @@ align-items: center;
     .home-content h1{
         font-size: 5rem;
     }
+    .achicar_input_mobile{
+        padding: 1%;
+    }
 }
 
-@media (max-width: 331px){
-    .achicar_input_mobile{
-        padding: 30px;
-    }
-    .home{
-        padding: 2 9%;
-    }
-}    
-@media (max-width: 320px){
-    .achicar_input_mobile{
-        padding: 22px;
-    }
-    
-}  
 
-@media (max-width: 304px){
-    .achicar_input_mobile{
-        padding: 15px;
-    }
-    
-} 
-@media (max-width: 287px){
-    .achicar_input_mobile{
-        padding: 5px;
-    }
-    
-} 
 */
 /*Keyframes | animaciones*/
 @keyframes homeBgText{
